# oox

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  cmake.yml
benchmarks/: CMakeLists.txt  bench_exceptions.cpp  bench_fib.cpp  bench_linsearch.cpp  bench_loops.cpp  bench_tbb_exceptions.cpp  harness_parallel.h  rapid_start.h
examples/: fibonacci.h  filesystem.h  reduce.h  wavefront.h
oox/: oox.h
stdexec_examples/: CMakeLists.txt  any_sender_of.h  fibonacci.h  main.cpp  reduce.h
tests/: CMakeLists.txt  exception_policy_compile.cmake  original_test_oox.cpp  test_deferred_oox.cpp  test_oox.cpp  test_reduce.cpp
